# Schedulify-Class-Sync

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  nginx.conf  requirements.txt  supervisord.conf
backend/: extract.json  ics_payload.json  pyproject.toml  uvicorn.ini
backend/app/: __init__.py  build_calendar.py  google.py  ics.py  llm_gemini.py  llm_ollama.py  main.py  ocr.py  parser.py  schema.py
backend/tests/: test_env.py  test_extract_gemini.py
frontend/: package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/styles/: globals.css
